log
Thu Apr 21 15:38:39 UTC 2022: 
 tests:  1|8
total_score: 0/70
b55dd62
Thu Apr 21 15:43:05 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:33: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                 ^~~~~~~
treemap.c:41:41: error: expected expression before ‘TreeMap’
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e89c4ca
Thu Apr 21 15:43:28 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeNode’:
treemap.c:30:41: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
     TreeNode * new = (TreeNode *)malloc(size_of(TreeNode));
                                         ^~~~~~~
treemap.c:30:49: error: expected expression before ‘TreeNode’
     TreeNode * new = (TreeNode *)malloc(size_of(TreeNode));
                                                 ^~~~~~~~
treemap.c: In function ‘createTreeMap’:
treemap.c:41:41: error: expected expression before ‘TreeMap’
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f222d65
